refactor: Home page and mobile UI fixes
Refactored Home page to remove deprecated Category browsing and featured playlists due to API 404 errors.

- Reverted Home to display New Releases, increased limit to 50.

- Added filtering to New Releases to exclude titles with non-standard characters likely to break YouTube search.

- Removed CategoryPage component, route, and related API functions.

Fixed various mobile UI layout issues:

- Ensured sidebar toggle button is visible on tablet/mobile.

- Added logo to mobile header.

- Adjusted player bar layout for small screens.

- Fixed Home page grid to display 3 columns on mobile.

Other changes:

- Removed unused skip buttons from PlayerControls.

- Added defensive checks and logging to PlayerContext for null videoId issues.

- Added initial README.md and .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,26 @@
 .env.test.local
 .env.production.local
 
+# Logs
+*.log
+debug.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+lerna-debug.log*
+
+# Dependency directories
+node_modules/
+
+# Build directory
+build/
+
+# Environment variables
+.env
+.env*.local
+
+# Optional editor directories
+.vscode
+
+# Credential helpers (if specific patterns are known)
+.git-credentials*
